Qt Designer: Fix invalid QIcon entry "<normaloff>.</normaloff>"

Prevent the pre-4.3 import code from triggering when a theme is present.
Amends 6bcdb38b5bdf8f0176db3f372d4b8c8b14ba459f.
Ignore the invalid "." value on loading broken forms.

Pick-to: 6.6 6.5 6.2 5.15
Fixes: QTBUG-115465
Task-number: QTBUG-7777
Change-Id: I6187f82dec8d3bc4a613c1cc7de3ef7ceea47151
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>